# NFT-Tickets

./: .env.development.secret  .env.example  .env.secret  .gitignore  API_DOCUMENTATION.md  API_README.md  CLAIM_INSTRUCTIONS.md  DEVNET_SETUP.md  MAINNET_DEPLOYMENT.md  PARTNER_INTEGRATION.md  README.md  SPECIFICATION.md  deploy-devnet.sh  package-lock.json  package.json  production-signer.json.secret  test-user-2.json  test-user.json  tsconfig.json
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
fight_tickets_nft/: .gitignore  Anchor.toml  BUILD_NOTES.md  METAPLEX_INTEGRATION.md  README.md  collection-keypair.json  collection-mainnet-keypair.json.secret  init-devnet.sh  package-lock.json  package.json
fight_tickets_nft/programs/fight_tickets_nft/: Cargo.toml
fight_tickets_nft/programs/fight_tickets_nft/src/: lib.rs
fight_tickets_nft/scripts/: burn.cjs  claim-with-metadata.cjs  init-mainnet.cjs  inspect-nft.cjs
fight_tickets_nft/tests/: fight_tickets_nft.ts
src/: index.ts
src/db/: index.ts
src/middleware/: auth.ts  errorHandler.ts
src/routes/: claim.ts  metadata.ts  webhook.ts
src/utils/: signature.ts
tests/: api.test.ts  setup.ts  signature.test.ts
